# Quark

./: .gitignore  README.md  main.py  pyproject.toml
configs/: turbo_large.yaml  turbo_medium.yaml  turbo_small.yaml  turbo_tiny.yaml
examples/: quantize_and_compare.py  train_tiny.py
scripts/: benchmark.py  count_params.py
src/turboquant/: __init__.py
src/turboquant/cli/: generate_cmd.py  main.py  quantize_cmd.py  tokenizer_cmd.py  train_cmd.py
src/turboquant/inference/: __init__.py  compressed_kv_cache.py  generator.py  kv_cache.py  sampling.py
src/turboquant/model/: __init__.py  attention.py  config.py  feedforward.py  normalization.py  rope.py  transformer.py
src/turboquant/quantization/: __init__.py  codebook.py  dynamic.py  int4.py  int8.py  quantize.py  turboquant_vq.py
src/turboquant/tokenizer/: __init__.py  special_tokens.py  tokenizer.py  trainer.py
src/turboquant/training/: __init__.py  checkpointing.py  distributed.py  metrics.py  optimizer.py  scheduler.py  trainer.py
tests/: conftest.py  test_attention.py  test_config.py  test_kv_cache.py  test_normalization.py  test_quantization.py  test_rope.py  test_sampling.py  test_transformer.py  test_turboquant_vq.py  test_xsa.py
